--- a/cypress/e2e/2-url-prompt/index.html
+++ b/cypress/e2e/2-url-prompt/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Default</title>
-        <link rel="stylesheet" href="../../../dist/easymde.min.css" />
-        <script src="../../../dist/easymde.min.js"></script>
+        <link rel="stylesheet" href="../../../dist/easymde.css" />
+        <script src="../../../dist/easymde.js"></script>
     </head>
 
     <body>
