--- a/cypress/e2e/3-class-prefix/index-no-prefix.html
+++ b/cypress/e2e/3-class-prefix/index-no-prefix.html
@@ -10,8 +10,8 @@
             integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
             crossorigin="anonymous"
         />
-        <link rel="stylesheet" href="../../../dist/easymde.min.css" />
-        <script src="../../../dist/easymde.min.js"></script>
+        <link rel="stylesheet" href="../../../dist/easymde.css" />
+        <script src="../../../dist/easymde.js"></script>
     </head>
 
     <body>
